vcluster_versioned_docs/version-0.37.0/deploy/control-plane/binary/node-requirements.mdx
---
title: Node Requirements
sidebar_label: Node Requirements
sidebar_position: 4
sidebar_class_name: standalone private-nodes
---
import Flow, { Step } from "@site/src/components/Flow";
import TenancySupport from '../../../_fragments/tenancy-support.mdx';

<TenancySupport standalone="true"  />

## Control plane node requirements

- Network connectivity between any control plane and worker nodes being used for the cluster 

## Host requirements

- Linux distribution with SystemD support (required for service management)
- `iptables` binaries installed (automatically available on Ubuntu, may need manual installation on other distributions)
- `curl` installed
- Root user access
- Increased inotify watchers on each node. fs.inotify resource limits (defined by `fs.inotify.max_user_watches` and `fs.inotify.max_user_instances` system variables. For example, in Ubuntu these default to 8192 and 128 respectively, which is not enough.)

:::info
On RHEL 8 and 9, SELinux in enforcing mode is supported with the
`vcluster-selinux` RPM. `install-standalone.sh` installs it
automatically; no extra steps are required. See
[SELinux support](../../worker-nodes/private-nodes/security/selinux.mdx).
:::

### Increase the inotify watchers limit 

Log into each node and manually increase the watchers limit.

<Flow>
    <Step>
    Log into the Node. Use SSH or your preferred method for node access.

    </Step>
    <Step>
    Confirm the current inotify watchers limit by running:

    ```bash
    cat /proc/sys/fs/inotify/max_user_watches
    ```
    </Step>
    <Step>
    Increase the limit temporarily.

    ```bash
    sudo sysctl fs.inotify.max_user_watches=524288
    ````
    Adjust the value as needed; 524288 is typically sufficient.

    </Step>
    <Step>
    Increase the limit permanently. 

    To make the change persistent across reboots, add it to the sysctl configuration:

    ```bash
    echo "fs.inotify.max_user_watches=524288" | sudo tee -a /etc/sysctl.conf
    sudo sysctl -p
    ```

    </Step>
</Flow>

## Supported operating systems

| OS | Version| Additional Instructions |
|---|---|---|
| Ubuntu | 24.04 | |
| Ubuntu | 22.04 | |
| RHEL (RedHat Enterprise Linux) | 9 | [Install `vcluster-selinux`](../../worker-nodes/private-nodes/security/selinux.mdx) or disable SELinux |
| RHEL (RedHat Enterprise Linux) | 8 | [Install `vcluster-selinux`](../../worker-nodes/private-nodes/security/selinux.mdx) and pin Kubernetes to 1.31, or disable SELinux |
| RHEL (RedHat Enterprise Linux) | 10 | Disable SELinux |
| CentOS Stream | 9 | Disable SELinux and install `iptables` |
| Rocky | 10 | Disable SELinux and install `iptables` |
| Rocky | 9 | Disable SELinux and install `iptables` |


### CentOS Stream and Rocky support

```shell title="Install iptables"
yum install iptables-services
systemctl enable iptables
systemctl start iptables
```